--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "redux": "^4.2.0",
+    "rehype-raw": "^6.1.1",
     "web-vitals": "^2.1.4",
     "wildemitter": "^1.2.1"
   },
